--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.81.1",
+    "axios": "^1.11.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "@react-native/new-app-screen": "0.81.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-draggable-flatlist": "^4.0.3",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-reorderable-list": "^0.16.2",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-worklets": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
